按空格键关闭popup；搜索结束后自动选中单词，方便继续输入新的单词。

--- a/option/options.html
+++ b/option/options.html
@@ -33,7 +33,7 @@ input.smallInput{border:1px solid black;FONT-SIZE: 9pt; FONT-STYLE: normal; FONT
 
         <title>Youdao Dict For Chrome</title>
     </head>
-    <body background="youdaoskin.jpg">
+    <body id="my_body" background="youdaoskin.jpg">
     
 	<table id="maintable" cellpadding="1" width=230px align = "center" style="word-break:keep-all;"> 
 		
