有道单词查询，支持发音音频的自动播放，美音

--- a/option/options.html
+++ b/option/options.html
@@ -84,5 +84,7 @@ input.smallInput{border:1px solid black;FONT-SIZE: 9pt; FONT-STYLE: normal; FONT
 		
     </body>
     <script type="text/javascript" src="options.js"> </script>
+	<!-- 支持发音音频播放 -->
+	<script type="text/javascript" src="speech.js"></script>
 </html>
 
