1. 在查词界面添加入口超链接“查词历史”，用来打开能显示查词历史记录的界面； 2. 给每个历史记录添加编号、查词时间； 3. 警告提示颜色改为黄色

--- a/option/options.html
+++ b/option/options.html
@@ -74,7 +74,10 @@ input.smallInput{border:1px solid black;FONT-SIZE: 9pt; FONT-STYLE: normal; FONT
 		</td></tr>
 
 		<tr><td> 
-		<div style="font-size:10px;float:right;"><a href = "#" id="feedback">意见反馈 </a> &nbsp;<a href = "#" id="about">关于</a></div>
+		<div style="font-size:10px;float:right;">
+		  <a href = "options.html?action=showhistory" id="showhistory" target="_blank">查词历史 </a> &nbsp;
+		  <a href = "#" id="feedback">意见反馈 </a> &nbsp;
+		  <a href = "#" id="about">关于</a></div>
 		</td></tr> 
 		 
 	
