升级，因为被Chrome屌说版本太旧了。

--- a/option/options.html
+++ b/option/options.html
@@ -38,7 +38,7 @@ input.smallInput{border:1px solid black;FONT-SIZE: 9pt; FONT-STYLE: normal; FONT
 	<table id="maintable" cellpadding="1" width=230px align = "center" style="word-break:keep-all;"> 
 		
 		<tr><td> 
-		<img src="logo.png"></img>
+		<img src="logo_2.png"></img>
 		</td></tr> 
 		
 		<tr><td> 
@@ -76,8 +76,6 @@ input.smallInput{border:1px solid black;FONT-SIZE: 9pt; FONT-STYLE: normal; FONT
 		<tr><td> 
 		<div style="font-size:10px;float:right;">
 		  <a href = "options.html?action=showhistory" id="showhistory" target="_blank">查词历史 </a> &nbsp;
-		  <a href = "#" id="feedback">意见反馈 </a> &nbsp;
-		  <a href = "#" id="about">关于</a></div>
 		</td></tr> 
 		 
 	
